# nsm66

./: ChangeLog  NEWS  README.md  RELNOTES  TODO  meson.build  meson.options  seq66-nsm.text  work.sh
doc/: README
doc/draw/: README
doc/latex/: make_pdf.sh
extras/notes/: liblo.text
extras/wraps/: nsm66-local.wrap
include/: meson.build  nsm66.hpp
include/nsm/: helpers.hpp  nsmbase.hpp  nsmclient.hpp  nsmcodes.hpp  nsmcontroller.hpp  nsmctlclient.hpp  nsmmessagesex.hpp  nsmproxy.hpp  nsmserver.hpp
include/osc/: endpoint.hpp  lowrapper.hpp  messages.hpp  method.hpp  osc_value.hpp  signal.hpp  thread.hpp
src/: meson.build  nsm66.cpp
src/nsm/: helpers.cpp  nsmbase.cpp  nsmclient.cpp  nsmcontroller.cpp  nsmctlclient.cpp  nsmmessagesex.cpp  nsmproxy.cpp  nsmserver.cpp
src/osc/: endpoint.cpp  lowrapper.cpp  messages.cpp  method.cpp  osc_value.cpp  signal.cpp  thread.cpp
subprojects/: README  libcfg66.wrap
tests/: meson.build  nsm_test.cpp
