#*****************************************************************************
# meson.options (nsm66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     nsm66
# \author      Chris Ahlstrom
# \date        2025-01-29
# \updates     2025-02-06
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "nsm66" library.
#
#  Note that, as of version 1.1, Meson uses "meson.options" in preference to
#  "meson_options.txt".  Hurray!
#
#  Options for nsm66.
#
#-----------------------------------------------------------------------------

option('enable-lo',
   type : 'boolean',
   value : true,
   description: 'Enable the OSC liblo library.'
)

option('enable-pthreads',
   type : 'boolean',
   value : true,
   description: 'Enable the pthreads library.'
)

#-----------------------------------------------------------------------------
# This option is checked only if nsm66 is not used as a subproject.
#-----------------------------------------------------------------------------

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

#-----------------------------------------------------------------------------
# Still working on getting this to work. Actually, for now we prefer
# to use the command "./work.sh --pdf" to make the PDF. That is consistent
# with our other '66' libraries.
#-----------------------------------------------------------------------------

option('enable-docs',
   type : 'boolean',
   value : false,
   description : 'Build the LaTeX documentation'
   )

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/nsm66',
   description : 'Directory where Nsm66 documentation is installed.',
   yield : true
)

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build with potext_support.'
)

#****************************************************************************
# meson.options (nsm66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
