#*****************************************************************************
# meson.build (nsm66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     nsm66
# \author      Chris Ahlstrom
# \date        2025-01-29
# \updates     2025-03-24
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "nsm66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.  They reside in:
#
#     -  src. The main include directory for non-namespace code.
#     -  src/nsm. The main files of this library.
#
#-----------------------------------------------------------------------------

libnsm66_sources += files(
   'nsm66.cpp',
   'nsm/helpers.cpp',
   'nsm/nsmbase.cpp',
   'nsm/nsmclient.cpp',
   'nsm/nsmcontroller.cpp',
   'nsm/nsmctlclient.cpp',
   'nsm/nsmmessagesex.cpp',
   'nsm/nsmproxy.cpp',
   'nsm/nsmserver.cpp',
   'osc/lowrapper.cpp',
   'osc/messages.cpp',
   'osc/method.cpp',
   'osc/osc_value.cpp',
   'osc/endpoint.cpp',
   'osc/signal.cpp',
   'osc/thread.cpp'
   )

#****************************************************************************
# meson.build (nsm66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
